style/blue_scroll/layout.css
/* ... */
#sideMenuOption-Members::before {
    background: url('./images/members-off.png');
    background-size: 100% 100%;
}

#sideMenuOption-Members:hover::before {
    background: url('./images/members-on.png');
    background-size: 100% 100%;
}

#sideMenuOption-Team::before {
    background: url('./images/team-off.png');
    background-size: 90% 90%;
}

#sideMenuOption-Team:hover::before {
    background: url('./images/team-on.png');
    background-size: 90% 90%;
}

#sideMenuOption-Travel::before {
    background: url('./images/travel-off.png');
    background-size: 90% 90%;
}

#sideMenuOption-Travel:hover::before {
    background: url('./images/travel-on.png');
    background-size: 90% 90%;
}

#sideMenuOption-Missions::before {
    background: url('./images/missions-off.png');
    background-size: 100% 100%;
}

#sideMenuOption-Missions:hover::before {
    background: url('./images/missions-on.png');
    background-size: 100% 100%;
}

#sideMenuOption-SpecialMissions::before {
    background: url('./images/specialmissions-off.png');
    background-size: 90% 90%;
}

#sideMenuOption-SpecialMissions:hover::before {
    background: url('./images/specialmissions-on.png');
    background-size: 90% 90%;
}

#sideMenuOption-Spar::before {
    background: url('./images/spar-off.png');
    background-size: 100% 100%;
}

#sideMenuOption-Spar:hover::before {
    background: url('./images/spar-on.png');
    background-size: 100% 100%;
}

#sideMenuOption-RamenShop::before {
    background: url('./images/ramen-off.png');
    background-size: 100% 100%;
}

#sideMenuOption-RamenShop:hover::before {
    background: url('./images/ramen-on.png');
    background-size: 100% 100%;
}

#sideMenuOption-ViewBattles::before {
    background: url('./images/viewbattles-off.png');
    background-size: 100% 100%;
}

#sideMenuOption-ViewBattles:hover::before {
    background: url('./images/viewbattles-on.png');
    background-size: 100% 100%;
}

#sideMenuOption-Shop::before {
    background: url('./images/shop-off.png');
    background-size: 90% 90%;
}

#sideMenuOption-Shop:hover::before {
    background: url('./images/shop-on.png');
    background-size: 90% 90%;
}

#sideMenuOption-VillageHQ::before {
    background: url('./images/villagehq-off.png');
    background-size: 90% 90%;
}

#sideMenuOption-VillageHQ:hover::before {
    background: url('./images/villagehq-on.png');
    background-size: 90% 90%;
}

#sideMenuOption-AncientMarket::before {
    background: url('./images/ancientmarket-off.png');
    background-size: 100% 100%;
}

#sideMenuOption-AncientMarket:hover::before {
    background: url('./images/ancientmarket-on.png');
    background-size: 100% 100%;
}

#sideMenuOption-ModPanel::before {
    background: url('./images/modpanel-off.png');
    background-size: 100% 100%;
}

#sideMenuOption-ModPanel:hover::before {
    background: url('./images/modpanel-on.png');
    background-size: 100% 100%;
}

#sideMenuOption-AdminPanel::before {
    background: url('./images/adminpanel-off.png');
    background-size: 90% 90%;
}

#sideMenuOption-AdminPanel:hover::before {
    background: url('./images/adminpanel-on.png');
    background-size: 90% 90%;
}

#sideMenuOption-Training::before {
    background: url('./images/training-off.png');
    background-size: 100% 100%;
}

#sideMenuOption-Training:hover::before {
    background: url('./images/training-on.png');
    background-size: 100% 100%;
}

#sideMenuOption-Arena::before {
    background: url('./images/arena-off.png');
    background-size: 100% 100%;
}

#sideMenuOption-Arena:hover::before {
    background: url('./images/arena-on.png');
    background-size: 100% 100%;
}

#sideMenuOption-Logout::before {
    background: url('./images/logout-off.png');
    background-size: 80% 80%;
}

#sideMenuOption-Logout:hover::before {
    background: url('./images/logout-on.png');
    background-size: 80% 80%;
}

#sideMenuOption-Clan::before {
    background: url('./images/clan-off.png');
    background-size: 80% 80%;
}

#sideMenuOption-Clan:hover::before {
    background: url('./images/clan-on.png');
    background-size: 80% 80%;
}


#logout {
    margin-top: 15px;

    text-align: center;
    font-family: 'BebasNeue', sans-serif;
    color: #beb28a;
}

#logout a {
    text-align: left;
}

/* Footer */
#footer {
    max-width: 100%;
    height: 44px;
    margin: 0px auto;
    position: relative;
    z-index: 80;

    background: url('./images/scrollbot-middle.png');
    background-position: left;
    background-repeat: repeat-x;

    font-family: 'Oswald', sans-serif;
    color: #b99f47;
    font-size: 0.7rem;
    line-height: 42px;
    text-indent: 20px;
    text-shadow: 0 1px 0 #000000;
}

#footer::before {
    content: '';
    width: 11px;
    height: 44px;
    position: absolute;
    top: 0;
    left: -11px;

    background: url('./images/scrollbot-left.png');
}

#footer::after {
    content: '';
    width: 11px;
    height: 44px;
    position: absolute;
    top: 0;
    right: -11px;

    background: url('./images/scrollbot-right.png');
}


/* Body content styling */
#content {
    position: relative;
}

.avatarFrame {
    margin: 0px;
    margin-right: 15px;

    width: 150px;
    height: 150px;

    padding: 10px 2px;

    text-align: center;

    border: 1px solid #FFFFFF;

    border-radius: 10px;
    box-shadow: 2px 2px 5px 0px #202020;
}

.avatarFrame img {
    display: block;
    margin: auto;
    max-width: 150px;
    max-height: 150px;
    margin-bottom: 5px;

    border: 0px;
}

label {
    display: inline-block;
}

#content table.table {
    margin: 0 auto 10px auto;
    padding: 0px;
    width: 95%;

    color: #88806c;
    font-size: 0.9rem;

    border-spacing: 0px;
    background: #0d111f;
    box-shadow: 0 0 2px #000000;
    border: 1px solid #b99e471f;
}

#content table.table a {
    color: #b99f47;
    text-decoration: none;
}

#content table.table a:hover {
    color: #beb28a;
}
/* ... */

